utils/force-app/main/default/serviceBase/objects/Service__mdt/fields/Active_in_Org__c.field-meta.xml
<CustomField>
    <fullName>Active_in_Org__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>If Active then the default is that calls to the service will pass through to the implementation code. If Inactive then all calls will be routed to Stub methods</description>
    <inlineHelpText>If Active then the default is that calls to the service will pass through to the implementation code. If Inactive then all calls will be routed to Stub methods</inlineHelpText>
    <label>Active in Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>