utils/force-app/main/default/serviceBase/objects/Service__mdt/fields/ProcessingInEnvironment__c.field-meta.xml
<CustomField>
    <fullName>ProcessingInEnvironment__c</fullName>
    <defaultValue>&quot;Real&quot;</defaultValue>
    <description>Determines if processing of this Service is stubbed in the current environment (&quot;Stub&quot;) or is fully operational (&quot;Real&quot;)</description>
    <inlineHelpText>Determines if processing of this Service is stubbed in the current environment (&quot;Stub&quot;) or is fully operational (&quot;Real&quot;)</inlineHelpText>
    <label>Processing In Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stub</fullName>
                <default>true</default>
                <label>Stub</label>
            </value>
            <value>
                <fullName>Real</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>